--- a/app.json
+++ b/app.json
@@ -43,7 +43,7 @@
       },
       "SUPPORT_CHAT": {
         "description": "ضـع رابـط جـروب الـدعـم",
-        "value": "https://t.me/rr_e_711",
+        "value": "https://t.me/rr_r_l",
         "required": false
       }
     },
